--- a/src/style/common.css
+++ b/src/style/common.css
@@ -5,7 +5,6 @@
 html {
   font-size: 10px;
 }
-
 body {
   margin: 0;
   font-size: 1.5rem;
@@ -16,11 +15,13 @@ i {
   cursor: pointer;
 }
 
-/* 여기서부터 form style*/
-form,
-fieldset {
-  padding: 0;
-  margin: 0;
+a {
+  text-decoration: none;
+}
+
+/* 여기서부터 form style form, */
+
+input {
   border: none;
 }
 
@@ -28,14 +29,7 @@ input:focus {
   outline: none;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-/* 여기까지 form style*/
-
-/* 여기서부터 h1~h6 */
+/* 여기까지 form style 여기서부터 h1 ~ h6 */
 h1 {
   font-family: "Lobster", cursive;
 }
@@ -47,27 +41,9 @@ h3 {
   font-weight: 400;
   line-height: 1.5;
 }
+/* 여기까지 h1 ~ h6  */
 
-a {
-  color: #000;
-  text-decoration: none;
-}
-
-p {
-  margin: 0;
-}
-/* 여기까지 h1~h6 */
-
-/* 여기서부터 공통 class*/
+/* 여기서부터 공통 class  */
 .blind {
   display: none;
 }
-
-.bold {
-  font-weight: 700;
-}
-
-.gray {
-  color: #adb0b3;
-}
-/* 여기까지 공통 class*/
