ADD : 초기 세팅 파일 추가

--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,8 +1,8 @@
-$border-color: #bcbcbc;
-$back-color: #fafafa;
+@import '../../style/mixin.scss';
+@import '../../style/variable.scss';
 
 body {
-  background-color: $back-color;
+  background-color: $background-color;
 
   .loginContainer {
     position: fixed;
@@ -10,7 +10,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     width: min-content;
-    background-color: #fff;
+    background-color: #ffffff;
     border: 1px solid $border-color;
 
     h1 {
@@ -26,7 +26,7 @@ body {
         margin: 0 auto 1rem;
         padding-left: 0.8rem;
         color: $border-color;
-        background-color: $back-color;
+        background-color: $background-color;
         border: 1px solid $border-color;
         border-radius: 3px;
         line-height: 4rem;
@@ -59,48 +59,3 @@ body {
     }
   }
 }
-
-// h1 {
-//   margin: 6rem 10rem;
-//   font-size: 5rem;
-// }
-
-// .loginWrap input {
-//   width: 80%;
-//   height: 4rem;
-//   margin: 0 auto 1rem;
-//   padding: 0rem 0.8rem;
-//   color: #bcbcbc;
-//   background-color: #fafafa;
-//   border: 1px solid #bcbcbc;
-//   border-radius: 3px;
-//   line-height: 4rem;
-// }
-
-// .logBtn {
-//   width: 80%;
-//   height: 4rem;
-//   margin-top: 0.8rem;
-//   color: #fff;
-//   background-color: #67b6fa;
-//   border: none;
-//   border-radius: 12px;
-//   font-size: 1.6rem;
-//   line-height: 4rem;
-// }
-
-// .loginBtnAbled {
-//   background-color: #39f;
-//   cursor: pointer;
-// }
-
-// .pwSearch {
-//   position: absolute;
-//   bottom: 2.5rem;
-//   width: 100%;
-//   font-size: 1.3rem;
-// }
-
-// .pwSearch a {
-//   color: #3b628a;
-// }
