--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -1,26 +1,11 @@
-@mixin flexBetween {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-@mixin profileFlex {
-  display: flex;
-  align-items: center;
-}
-
-@mixin userPofileImg {
-  background-position: 0 0;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 50%;
-}
+@import '../../style/mixin.scss';
+@import '../../style/variable.scss';
 
 .navContainer {
   @include flexBetween;
   padding: 2rem 4rem;
   background-color: #fff;
-  border-bottom: 1px solid #e6e6e6;
+  border-bottom: 1px solid $border-color;
 
   .logoWrap {
     display: flex;
@@ -44,19 +29,19 @@
   .searchWrap {
     width: 20%;
     padding: 0.5rem 0;
-    background-color: #fafafa;
-    border: 2px solid #e6e6e6;
+    background-color: $background-color;
+    border: 2px solid $border-color;
     text-align: center;
 
     i {
-      color: #e6e6e6;
+      color: $gray;
       font-size: 1.2rem;
     }
 
     input {
       width: inherit;
-      color: #e6e6e6;
-      background-color: #fafafa;
+      color: $gray;
+      background-color: $background-color;
       border: none;
       font-size: 1.3rem;
       text-align: center;
@@ -96,21 +81,21 @@ main {
       width: 30%;
       height: fit-content;
       margin-right: 2.5%;
-      border: 1px solid #e6e6e6;
+      border: 1px solid $border-color;
       background-color: #fff;
 
       header {
         display: flex;
         align-items: center;
         padding: 1.2rem;
-        border-bottom: 1px solid #e6e6e6;
+        border-bottom: 1px solid $border-color;
 
         div {
           @include userPofileImg;
           width: 3rem;
           height: 3rem;
           margin-right: 1rem;
-          background-image: url("../../asset/images/userimg.jpeg");
+          background-image: url('../../asset/images/userimg.jpeg');
         }
 
         p {
@@ -150,7 +135,7 @@ main {
               width: 2rem;
               height: 2rem;
               margin: 1rem 0.5rem 1rem 0;
-              background-image: url("../../asset/images/userimg.jpeg");
+              background-image: url('../../asset/images/userimg.jpeg');
             }
 
             span {
@@ -190,7 +175,7 @@ main {
                 }
 
                 & li::before {
-                  content: "somyi_96";
+                  content: 'somyi_96';
                   margin-right: 1rem;
                   font-weight: 600;
                 }
@@ -202,7 +187,7 @@ main {
 
         form {
           margin-top: 1rem;
-          border-top: 1px solid #e6e6e6;
+          border-top: 1px solid $border-color;
 
           input {
             width: 80%;
@@ -238,7 +223,7 @@ main {
           width: 5rem;
           height: 5rem;
           margin-right: 1rem;
-          background-image: url("../../asset/images/userimg.jpeg");
+          background-image: url('../../asset/images/userimg.jpeg');
         }
 
         h2 {
@@ -247,7 +232,7 @@ main {
 
         p {
           font-size: 1.2rem;
-          color: #adb0b3;
+          color: $gray;
         }
       }
 
@@ -256,7 +241,7 @@ main {
         padding: 1rem 1.5rem;
         max-height: 30vh;
         background-color: #fff;
-        border: 1px solid #e6e6e6;
+        border: 1px solid $border-color;
         overflow-y: scroll;
 
         .storyHeader {
@@ -280,7 +265,7 @@ main {
               @include userPofileImg;
               width: 3rem;
               height: 3rem;
-              background-image: url("../../asset/images/userimg.jpeg");
+              background-image: url('../../asset/images/userimg.jpeg');
               border: 1px solid #fff;
             }
           }
@@ -295,7 +280,7 @@ main {
         width: max-content;
         margin-top: 2rem;
         padding: 1rem 1.5rem;
-        border: 1px solid #e6e6e6;
+        border: 1px solid $border-color;
         background-color: #fff;
 
         .recommondHeader {
@@ -312,14 +297,14 @@ main {
             width: 3rem;
             height: 3rem;
             margin-right: 1rem;
-            background-image: url("../../asset/images/userimg.jpeg");
+            background-image: url('../../asset/images/userimg.jpeg');
           }
 
           div {
             max-width: 15rem;
 
             p {
-              color: #adb0b3;
+              color: $gray;
               overflow: hidden;
               text-overflow: ellipsis;
               white-space: nowrap;
@@ -340,7 +325,7 @@ main {
       footer {
         margin-top: 2rem;
         font-size: 1.3rem;
-        color: #adb0b3;
+        color: $gray;
 
         ul {
           li {
@@ -348,7 +333,7 @@ main {
           }
 
           & li::after {
-            content: "·";
+            content: '·';
             margin-left: 0.2rem;
             margin-right: 0.2rem;
           }
