MODIFY : Main component className 수정

--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -1,3 +1,5 @@
+@import './variable.scss';
+
 * {
   box-sizing: border-box;
 }
@@ -9,6 +11,7 @@ html {
     margin: 0;
     font-size: 1.5rem;
     line-height: 1.5;
+    background-color: $background-color;
   }
 }
 
